# person_generator_project

./: README.md  README2_updated.md  pyproject.toml  run_tests.sh
person_generator/: display_formatters.py  random_person_generator.py
person_generator/data/: list.occupations
person_generator_scriptsanddata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytests/: conftest.py  test_display_formatters_pytest.py  test_random_person_generator_pytest.py
unittests/: test_random_person_generator_unittest.py
