[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "person-generator-scriptsanddata" # The actual Python package name
version = "0.0.2" # Initial version, as per our plan
description = "A Python project to generate random person attributes"
readme = "README.md"
authors = [ { name="Scripts and Data" }, ]
requires-python = ">=3.9"
# --- FIX FOR DEPRECATION WARNING ---
license = "GPL-3.0-only" # Use the SPDX identifier for GNU General Public License v3.0 only

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

# --- FIX FOR MULTIPLE TOP-LEVEL PACKAGES ERROR ---
[tool.setuptools]
packages = ["person_generator"] 

# Pytest specific configuration
[tool.pytest.ini_options]
pythonpath = ["."] # Add current directory to Python path so 'person_generator' can be imported
testpaths = ["pytests", "unittests"] # Tell pytest where to find *all* your tests by default
# If you only want pytest to run its own tests, you'd do:
# testpaths = ["pytests"]
# Then you'd run unittest separately.
